# destructor_smoke_bot

./: .env  .gitignore  README.md  docker-compose.yml  pyproject.toml
app/: __main__.py  bot.py
app/config/: __init__.py  prod.py
app/core/: messages.py  serializer.py  tasks.py
app/db/: models.py  mongo.py
